--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Strange Rock Table</title>
   <link rel="stylesheet" href="style.css">
@@ -8,7 +9,7 @@
 <body>
   <div class="container">
     <div class="tips-wrapper">
-      <h3 onclick="readAllTips()">Tips</h3>
+      <h3>Tips</h3>
 
       <ul>
         <li onclick="speakText('Always wear relevant skillcape.')">Always wear relevant skill cape.</li>
@@ -48,6 +49,7 @@
             <td onclick="toggleCellColor(this)" class="strange" data-cell-id="cell5">Cooking – Cook</td>
             <td onclick="toggleCellColor(this)" class="golden" data-cell-id="cell6">Crafting – Dream of Iaia(hides) /
               Sandstone</td>
+
           </tr>
           <tr>
             <td onclick="toggleCellColor(this)" class="strange" data-cell-id="cell7">Crafting – Dream of Iaia(hides) /
@@ -163,6 +165,9 @@ function checkAndReadUncheckedRows() {
     }
   });
 }
+
+
+      // Rest of the code
     </script>
 </body>
 
