--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li onclick="speakText('Always wear relevant skillcape.')">Always wear relevant skill cape.</li>
         <li
           onclick="speakText('Get the first Strange rock, change skill and come back after obtaining a different one.')">
-          Get the first Strange or Golden rock, change skill and come back after obtaining a different one.</li>
+          Get the first Strange or Golden rock, change skill and then go back to previous. Rock rarity increases for same skill after first rock obtained but will reset when changing skill</li>
         <li onclick="speakText('More likely to get golden rocks in Prifddinas.')">More likely to get golden rocks in
           Prifddinas.</li>
         <li
