--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>Strange Rock Table</title>
   <link rel="stylesheet" href="style.css">
@@ -8,9 +7,12 @@
 
 <body>
   <div class="container">
+    <div id="navbar">
+      <a href="./index.html">Strange Rocks</a>
+      <a href="./index.html">Fish Flingers</a>
+    </div>
     <div class="tips-wrapper">
       <h3>Tips</h3>
-
       <ul>
         <li onclick="speakText('Always wear relevant skillcape.')">Always wear relevant skill cape.</li>
         <li
