--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="container">
     <div id="navbar">
       <a href="./index.html">Strange Rocks</a>
-      <a href="./index.html">Fish Flingers</a>
+      <a href="./fishflingers.html">Fish Flingers</a>
     </div>
     <div class="tips-wrapper">
       <h3>Tips</h3>
