--- a/fishflingers.html
+++ b/fishflingers.html
@@ -27,11 +27,9 @@
             <h1>Fish Flingers Guide</h1><br>
             <h2>Before Starting</h2>
             <p>
-                <ul>
-                    <li>Alt1 - Click ratings button and click read from screen at start to find fish locations.</li>
-                    <li>Get hint from guy, and add to hint section.</li>
-                    <li>Other people will give hints, fill those in as well.</li>
-                </ul>
+                    <p>1. Alt1 - Click ratings button and click read from screen at start to find fish locations.</p>
+                    <p>2. Get hint from person behind desk, and add to hint section.</p>
+                    <p>3. Other people will give hints in chat, add those to hint section.</p>
             </p>
             <h2>Game</h2>
             <p>1. Click any Bait, Rod and Weight and click fish at Dock.</p>
@@ -40,7 +38,7 @@
             <h3>When all tackles found</h3>
             <p>
                1. At Beach, try catch Big Fish and Assist with catching Big fish, to assist just click on bubbles that
-                appear<br><ul>
+                appear.<br><ul>
                     <li>Big Fish can only be found at 100% rating</li>
                     <li>3/3 Big Fish</li>
                     <li>6/6 Assisted Big Fish</li>
