--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="./fishflingers.html">Fish Flingers</a>
     </div>
     <div class="tips-wrapper">
-      <h3>Tips</h3>
+      <h3>Useful Info</h3>
       <ul>
         <li onclick="speakText('Always wear relevant skillcape.')">Always wear relevant skill cape.</li>
         <li
