--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="navbar">
       <a href="./index.html">Strange Rocks</a>
       <a href="./fishflingers.html">Fish Flingers</a>
+      <a href="./mazcab.html">Mazcab Reputation</a>
     </div>
     <div class="tips-wrapper">
       <h3>Useful Info</h3>
