--- a/mazcab.html
+++ b/mazcab.html
@@ -14,11 +14,13 @@
             <a href="./mazcab.html">Mazcab Reputation</a>
         </div>
         <div class="tips-wrapper">
+            <h2>uwu</h2>
         </div>
         <div class="content-wrapper">
             <h1>Mazcab Reputation Guide</h1>
             <h2>Trinks</h2>
             <p>3 Daily Trinks(15 rep per day)</p>
+            <p>Get Trinks from Trinks, once completed go back to get another</p>
             <p>Possible tasks: </p>
             <ul>
                 <li>Find a Traitor in the Nemi Forest. The traitor is level 5 with 1000 life points and thus is easy to kill.</li>
