--- a/mazcab.html
+++ b/mazcab.html
@@ -23,40 +23,47 @@
             <p>Get Trinks from Trinks, once completed go back to get another</p>
             <p>Possible tasks: </p>
             <ul>
-                <li>Find a Traitor in the Nemi Forest. The traitor is level 5 with 1000 life points and thus is easy to kill.</li>
+                <li>Find a Traitor in the Nemi Forest. The traitor is level 5 with 1000 life points and thus is easy to
+                    kill.</li>
                 <li>Deliver a message to Acca Otot. Acca Otot will give you a message to take back to Trinks.</li>
                 <li>Repair 10 fences around Kanatah.</li>
-                <li>Kill 10 Airut. You are given Nemi poison for this task, which greatly weakens the Airut when used on them. Airut poisoned with the Nemi poison give no drops.</li>
-                <li>Free 5 Goebies from their cages by the Airut, and kill 5 Airut guarding them. Nemi poison can be used for this task.</li>
+                <li>Kill 10 Airut. You are given Nemi poison for this task, which greatly weakens the Airut when used on
+                    them. Airut poisoned with the Nemi poison give no drops.</li>
+                <li>Free 5 Goebies from their cages by the Airut, and kill 5 Airut guarding them. Nemi poison can be
+                    used for this task.</li>
                 <li>Clear 10 fallen rocks north-west of Kanatah.</li>
-                <li>Light the beacon north of the eastern entrance to the Nemi Forest. (The beacon is north of the Goebie in the graveyard, don't go inside the forest.)</li>
-                <li>Pick a Pahtli fruit from a Pahtli plant in the Nemi Forest to cure sickly elders. (The pahtli fruit is plucked from a plant found in the forest)</li>
+                <li>Light the beacon north of the eastern entrance to the Nemi Forest. (The beacon is north of the
+                    Goebie in the graveyard, don't go inside the forest.)</li>
+                <li>Pick a Pahtli fruit from a Pahtli plant in the Nemi Forest to cure sickly elders. (The pahtli fruit
+                    is plucked from a plant found in the forest)</li>
                 <li>Collect 10 driftwood and return them to Trinks.</li>
                 <li>Salvage scraps from 5 tents in Kanatah.</li>
-                </ul>
+            </ul>
             <p>Kanatah is place you get Trinks</p>
-            <p>Rangers can teleport you around to make for quicker navigation around Mazcab</p>    
+            <p>Rangers can teleport you around to make for quicker navigation around Mazcab</p>
             <h2>Nemi Forest</h2>
             <p>5 Rep points for each activity in Forest (45 per day)</p>
             <p>Use world from latest reddit post</p>
             <p><a href="https://www.reddit.com/r/NemiForest/new/" target="_blank">Nemi Forest Map</a></p>
             <p></p>
             <h2>Other ways</h2>
-            <p>Burial Charms:
-                <ul><li>
-                    Small - 50 rep
-                </li>
-                <li>
-                    Med - 100 rep
-                </li>
-                <li>
-                    Large - 150 rep
-                </li>
-            </ul>
+            <p>Burial Charms(Beastmaster, Yakamaru, Tarvelling Merchant):
+                <ul>
+                    <li>
+                        Small - 50 rep
+                    </li>
+                    <li>
+                        Medium - 100 rep
+                    </li>
+                    <li>
+                        Large - 150 rep
+                    </li>
+                </ul>
             </p>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
+
 </html>
 </body>
 
