--- a/mazcab.html
+++ b/mazcab.html
@@ -62,49 +62,54 @@
                 </ul>
             </p>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
 <script>
-    async function fetchData() {
-      try {
-        const response = await fetch('https://www.reddit.com/r/nemiforest/new.json?sort=new');
-        const data = await response.json();
+async function fetchData() {
+  try {
+    const response = await fetch('https://www.reddit.com/r/nemiforest/new.json?sort=new');
+    const data = await response.json();
 
-        // Extract the 'url_overridden_by_dest' and 'link_flair_css_class' fields from the first post
-        const firstPost = data.data.children[0].data;
-        const imageUrl = firstPost.url_overridden_by_dest;
-        const linkFlairCssClass = firstPost.link_flair_css_class;
+    // Extract the 'url_overridden_by_dest' and 'link_flair_css_class' fields from the first post
+    const firstPost = data.data.children[0].data;
+    const imageUrl = firstPost.url_overridden_by_dest;
+    let linkFlairCssClass = firstPost.link_flair_css_class;
 
-        // Display the link flair and clickable image on the webpage
-        const resultContainer = document.getElementById('nemiresult');
-
-        // Link Flair
-        const flairElement = document.createElement('p');
-        flairElement.textContent = `Status: ${linkFlairCssClass}`;
-        resultContainer.appendChild(flairElement);
-
-        // Clickable Image
-        const imageLinkElement = document.createElement('a');
-        imageLinkElement.href = imageUrl;  // Set the href attribute to the image URL
-        imageLinkElement.target = '_blank'; // Open the link in a new tab
-        const imageElement = document.createElement('img');
-        imageElement.src = imageUrl;
-        imageElement.alt = 'Latest Nemi Forest Post';
-
-        // Conditionally apply the 'greyed-out' class if linkFlairCssClass is 'depleted'
-        if (linkFlairCssClass === 'depleted') {
-          imageElement.classList.add('greyed-out');
-        }
-
-        imageLinkElement.appendChild(imageElement);
-        resultContainer.appendChild(imageLinkElement);
-      } catch (error) {
-        console.error('Error fetching data:', error);
-      }
+    // If linkFlairCssClass is null, set it to 'active'
+    if (!linkFlairCssClass) {
+      linkFlairCssClass = 'active';
     }
 
-    fetchData();
+    // Display the link flair and clickable image on the webpage
+    const resultContainer = document.getElementById('nemiresult');
+
+    // Link Flair
+    const flairElement = document.createElement('p');
+    flairElement.textContent = `Status: ${linkFlairCssClass}`;
+    resultContainer.appendChild(flairElement);
+
+    // Clickable Image
+    const imageLinkElement = document.createElement('a');
+    imageLinkElement.href = imageUrl;  // Set the href attribute to the image URL
+    imageLinkElement.target = '_blank'; // Open the link in a new tab
+    const imageElement = document.createElement('img');
+    imageElement.src = imageUrl;
+    imageElement.alt = 'Latest Nemi Forest Post';
+
+    // Conditionally apply the 'greyed-out' class if linkFlairCssClass is 'depleted'
+    if (linkFlairCssClass === 'depleted') {
+      imageElement.classList.add('greyed-out');
+    }
+
+    imageLinkElement.appendChild(imageElement);
+    resultContainer.appendChild(imageLinkElement);
+  } catch (error) {
+    console.error('Error fetching data:', error);
+  }
+}
+
+fetchData();
+
   </script>
 </body>
 </html>
