--- a/fishflingers.html
+++ b/fishflingers.html
@@ -20,9 +20,12 @@
                 <li>Medal for catching 3 Big fish.</li>
                 <li>Medal for assisting with 6 Big Fish.</li>
                 <li>Change Game messages to on (easier to see when caught Big Fish).</li>
-                <li>World 89 - Fish Flingers world</li>
-                <li>"ahelp" - Friend chat to check if people are playing</li>
+                <li>World 89 - Fish Flingers world.</li>
+                <li>"ahelp" - Friend chat to check if people are playing.</li>
+                <li>Use Fish flingers reward enhancers.</li>
+                <li><img src="./fishflingersmap.png"></li>
             </ul>
+            
         </div>
         <div class="content-wrapper">
             <h1>Fish Flingers Guide</h1>
@@ -48,7 +51,6 @@
             <p>3. When all Big fish/assisted fish are done, just fish and wait for game end.
             </p>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
 </body>
