--- a/mazcab.html
+++ b/mazcab.html
@@ -20,9 +20,14 @@
         <div class="content-wrapper">
             <h1>Mazcab Reputation Guide</h1>
             <h2>Trinks</h2>
+
             <p>3 Daily Trinks(15 rep per day)</p>
-            <p>Get Trinks from Trinks, once completed go back to get another</p>
-            <p>Possible tasks: </p>
+            <p>Get Trinks from Trinks, once completed go back to get another</p>  
+            
+            <p>Kanatah is place you get Trinks</p>
+            <p>Rangers can teleport you around to make for quicker navigation around Mazcab</p>      
+            <details>
+                <summary>Possible Tasks:</summary>
             <ul>
                 <li>Find a Traitor in the Nemi Forest. The traitor is level 5 with 1000 life points and thus is easy to
                     kill.</li>
@@ -40,8 +45,7 @@
                 <li>Collect 10 driftwood and return them to Trinks.</li>
                 <li>Salvage scraps from 5 tents in Kanatah.</li>
             </ul>
-            <p>Kanatah is place you get Trinks</p>
-            <p>Rangers can teleport you around to make for quicker navigation around Mazcab</p>
+              </details>
             <h2>Nemi Forest</h2>
             <p>5 Rep points for each activity in Forest (45 per day)</p>
             <p>Use world from latest reddit post</p>
