--- a/fishflingers.html
+++ b/fishflingers.html
@@ -34,10 +34,11 @@
                     <p>1. Alt1 - Click ratings button and click read from screen at start to find fish locations.</p>
                     <p>2. Get hint from person behind desk, and add to hint section.</p>
                     <p>3. Other people will give hints in chat, add those to hint section.</p>
+                    <br><img src="images/fishflingers_alt1_locations.png">
             </p>
             <h2>Game</h2>
             <p>1. Click any Bait, Rod and Weight and click fish at Dock.</p>
-            <p>2. White boxes appear on fishing interface click those, change as they change till rating at 100%.</p>
+            <p>2. White boxes appear on fishing interface click those, change as they change till rating at 100%.<br><br><img src="images/fishflingers_game_overlay.png"></p>
             <p>3. 100% rating means perfect tackle has been found and can move onto next area (some areas have 2 to find).</p>
             <h3>When all tackles found</h3>
             <p>
@@ -47,8 +48,8 @@
                     <li>3/3 Big Fish</li>
                     <li>6/6 Assisted Big Fish</li>
                 </ul></p>
-            <p>2. When red bar at 96% move back to previous section keep eye out for Big Fish.</p>
-            <p>3. When all Big fish/assisted fish are done, just fish and wait for game end.
+            <p>2. When red bar reaches 96% move back to previous section and keep eye out for Big Fish.</p>
+            <p>3. When all Big fish/Assisted fish are done, just fish and wait for game end.
             </p>
         </div>
 </body>
