--- a/fishflingers.html
+++ b/fishflingers.html
@@ -23,7 +23,7 @@
                 <li>World 89 - Fish Flingers world.</li>
                 <li>"ahelp" - Friend chat to check if people are playing.</li>
                 <li>Use Fish flingers reward enhancers.</li>
-                <li><img src="./fishflingersmap.png"></li>
+                <li><img src="images/fishflingersmap.png"></li>
             </ul>
             
         </div>
