--- a/fishflingers.html
+++ b/fishflingers.html
@@ -39,7 +39,7 @@
             <h2>Game</h2>
             <p>1. Click any Bait, Rod and Weight and click fish at Dock.</p>
             <p>2. White boxes appear on fishing interface click those, change as they change till rating at 100%.<br><br><img src="images/fishflingers_game_overlay.png"></p>
-            <p>3. 100% rating means perfect tackle has been found and can move onto next area (some areas have 2 to find).</p>
+            <p>3. 100% rating means perfect tackle has been found and can move onto next area (some areas have 2 to find).<br><img src="images/fishflingers_catch_interface.png"></p>
             <h3>When all tackles found</h3>
             <p>
                1. At Beach, try catch Big Fish and Assist with catching Big fish, to assist just click on bubbles that
@@ -48,7 +48,7 @@
                     <li>3/3 Big Fish</li>
                     <li>6/6 Assisted Big Fish</li>
                 </ul></p>
-            <p>2. When red bar reaches 96% move back to previous section and keep eye out for Big Fish.</p>
+            <p>2. When red bar reaches 96% move back to previous section and keep eye out for Big Fish.<br><img src="images/fishflingers_rating_interface.png"></p>
             <p>3. When all Big fish/Assisted fish are done, just fish and wait for game end.
             </p>
         </div>
