--- a/cookieclicker.html
+++ b/cookieclicker.html
@@ -106,7 +106,7 @@
         <p id="topScore">Highscore: <span id="topScoreValue">0</span></p>
         <p id="intervalText">Speed: <span id="intervalValue">2000</span> ms</p>
     </div>
-    <div id="gamewindow"><img id="cookie" src="images/cookie_level_1.png" alt="Cookie" onclick="clickCookie()"></div>
+    <div id="gamewindow"><img id="cookie" src="images/cookie/cookie_level_1.png" alt="Cookie" onclick="clickCookie()"></div>
     <script>
         // Global variables
         let score = 0;
