--- a/mazcab.html
+++ b/mazcab.html
@@ -12,6 +12,7 @@
             <a href="./index.html">Strange Rocks</a>
             <a href="./fishflingers.html">Fish Flingers</a>
             <a href="./mazcab.html">Mazcab Reputation</a>
+            <a href="./ponggame.html">Game</a>
         </div>
         <div class="tips-wrapper">
             <a href="https://www.reddit.com/r/NemiForest/new/"><h2>Nemi Forest</h2></a>
