--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <a href="./index.html">Strange Rocks</a>
       <a href="./fishflingers.html">Fish Flingers</a>
       <a href="./mazcab.html">Mazcab Reputation</a>
+      <a href="./ponggame.html">Game</a>
     </div>
     <div class="tips-wrapper">
       <h3>Useful Info</h3>
@@ -143,7 +144,6 @@
     </div>
 
     <script src="content.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
       
 // Function to check and read unchecked rows
